--- a/misc/Jenkinsfile
+++ b/misc/Jenkinsfile
@@ -11,9 +11,9 @@ node {
        sh 'npm test'
      }
    }
-  //  stage('docker build/push') {
-  //    docker.withRegistry('https://index.docker.io/v1/', 'dockerhub') {
-  //      def app = docker.build("awhuang0930/docker-nodejs-demo", '.').push()
-  //    }
-  //  }
+   stage('docker build/push') {
+     docker.withRegistry('https://index.docker.io/v1/', 'dockerhub') {
+       def app = docker.build("awhuang0930/docker-nodejs-demo", '.').push()
+     }
+   }
 }
