--- a/misc/Jenkinsfile
+++ b/misc/Jenkinsfile
@@ -11,9 +11,15 @@ node {
   //      sh 'npm test'
   //    }
   //  }
-   stage('docker build/push') {
-     docker.withRegistry('https://index.docker.io/v1/', 'dockerhub') {
-       def app = docker.build("awhuang0930/docker-nodejs-demo", '.').push()
+  stage('docker build') {
+     steps {
+       echo 'start building docker image'
+       def app = docker.build("awhuang0930/docker-nodejs-demo", '.')
      }
    }
+  //  stage('docker build/push') {
+  //    docker.withRegistry('https://index.docker.io/v1/', 'dockerhub') {
+  //      def app = docker.build("awhuang0930/docker-nodejs-demo", '.').push()
+  //    }
+  //  }
 }
