--- a/misc/Jenkinsfile
+++ b/misc/Jenkinsfile
@@ -5,16 +5,16 @@ node {
      sh "git rev-parse --short HEAD > .git/commit-id"                        
      commit_id = readFile('.git/commit-id').trim()
    }
-  //  stage('test') {
-  //    nodejs(nodeJSInstallationName: 'nodejs') {
-  //      sh 'npm install --only=dev'
-  //      sh 'npm test'
-  //    }
-  //  }
-  stage('docker build') {
-       echo 'start building docker image'
-       def app = docker.build("awhuang0930/docker-nodejs-demo", '.')
+   stage('test') {
+     nodejs(nodeJSInstallationName: 'nodejs') {
+       sh 'npm install --only=dev'
+       sh 'npm test'
+     }
    }
+  // stage('docker build') {
+  //      echo 'start building docker image'
+  //      def app = docker.build("awhuang0930/docker-nodejs-demo", '.')
+  //  }
   //  stage('docker build/push') {
   //    docker.withRegistry('https://index.docker.io/v1/', 'dockerhub') {
   //      def app = docker.build("awhuang0930/docker-nodejs-demo", '.').push()
