--- a/misc/Jenkinsfile
+++ b/misc/Jenkinsfile
@@ -15,9 +15,9 @@ node {
   //      echo 'start building docker image'
   //      def app = docker.build("awhuang0930/docker-nodejs-demo", '.')
   //  }
-  //  stage('docker build/push') {
-  //    docker.withRegistry('https://index.docker.io/v1/', 'dockerhub') {
-  //      def app = docker.build("awhuang0930/docker-nodejs-demo", '.').push()
-  //    }
-  //  }
+   stage('docker build/push') {
+     docker.withRegistry('https://index.docker.io/v1/', 'dockerhub') {
+       def app = docker.build("awhuang0930/docker-nodejs-demo", '.').push()
+     }
+   }
 }
