--- a/misc/Jenkinsfile
+++ b/misc/Jenkinsfile
@@ -1,3 +1,4 @@
+
 node {
    def commit_id
    stage('Preparation') {
@@ -11,13 +12,9 @@ node {
        sh 'npm test'
      }
    }
-  // stage('docker build') {
-  //      echo 'start building docker image'
-  //      def app = docker.build("awhuang0930/docker-nodejs-demo", '.')
-  //  }
    stage('docker build/push') {
      docker.withRegistry('https://index.docker.io/v1/', 'dockerhub') {
-       def app = docker.build("awhuang0930/docker-nodejs-demo", '.').push()
+       def app = docker.build("wardviaene/docker-nodejs-demo:${commit_id}", '.').push()
      }
    }
 }
